Week 2 - Day 5: Completed exercises and lectures

--- a/week2/day3.ipynb
+++ b/week2/day3.ipynb
@@ -10,72 +10,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "70e39cd8-ec79-4e3e-9c26-5659d42d0861",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T15:08:41.975683Z",
+     "start_time": "2025-11-01T15:08:35.578673Z"
+    }
+   },
    "source": [
     "# imports\n",
     "\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
+    "# import os\n",
+    "# from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import gradio as gr"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\lenovo\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "231605aa-fccb-447e-89cf-8b187444536a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load environment variables in a file called .env\n",
-    "# Print the key prefixes to help with any debugging\n",
-    "\n",
-    "load_dotenv(override=True)\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "anthropic_api_key = os.getenv('ANTHROPIC_API_KEY')\n",
-    "google_api_key = os.getenv('GOOGLE_API_KEY')\n",
-    "\n",
-    "if openai_api_key:\n",
-    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
-    "else:\n",
-    "    print(\"OpenAI API Key not set\")\n",
-    "    \n",
-    "if anthropic_api_key:\n",
-    "    print(f\"Anthropic API Key exists and begins {anthropic_api_key[:7]}\")\n",
-    "else:\n",
-    "    print(\"Anthropic API Key not set\")\n",
-    "\n",
-    "if google_api_key:\n",
-    "    print(f\"Google API Key exists and begins {google_api_key[:8]}\")\n",
-    "else:\n",
-    "    print(\"Google API Key not set\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "6541d58e-2297-4de1-b1f7-77da1b98b8bb",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T15:08:43.296390Z",
+     "start_time": "2025-11-01T15:08:42.976811Z"
+    }
+   },
    "source": [
     "# Initialize\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "key = os.getenv('GOOGLE_API_KEY')\n",
     "\n",
-    "openai = OpenAI()\n",
-    "MODEL = 'gpt-4o-mini'"
-   ]
+    "gemini = OpenAI(\n",
+    "    api_key=key,\n",
+    "    base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    ")\n",
+    "MODEL = 'gemini-2.5-flash'"
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e16839b5-c03b-4d9d-add6-87a0f6f37575",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T09:43:13.856981Z",
+     "start_time": "2025-10-26T09:43:13.845533Z"
+    }
+   },
    "source": [
     "system_message = \"You are a helpful assistant\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -112,10 +112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1eacc8a4-4b48-4358-9e06-ce0020041bc1",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T09:43:21.788451Z",
+     "start_time": "2025-10-26T09:43:21.777095Z"
+    }
+   },
    "source": [
     "# Simpler than in my video - we can easily create this function that calls OpenAI\n",
     "# It's now just 1 line of code to prepare the input to OpenAI!\n",
@@ -131,13 +134,15 @@
     "    print(\"And messages is:\")\n",
     "    print(messages)\n",
     "\n",
-    "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
+    "    stream = gemini.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
     "\n",
     "    response = \"\"\n",
     "    for chunk in stream:\n",
     "        response += chunk.choices[0].delta.content or ''\n",
     "        yield response"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -149,76 +154,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0866ca56-100a-44ab-8bd0-1568feaf6bf2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T09:43:32.704002Z",
+     "start_time": "2025-10-26T09:43:31.574945Z"
+    }
+   },
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7874\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7874/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1f91b414-8bab-472d-b9c9-3fa51259bdfe",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T10:12:24.918078Z",
+     "start_time": "2025-10-26T10:12:24.891671Z"
+    }
+   },
    "source": [
     "system_message = \"You are a helpful assistant in a clothes store. You should try to gently encourage \\\n",
     "the customer to try items that are on sale. Hats are 60% off, and most other items are 50% off. \\\n",
     "For example, if the customer says 'I'm looking to buy a hat', \\\n",
     "you could reply something like, 'Wonderful - we have lots of hats - including several that are part of our sales event.'\\\n",
     "Encourage the customer to buy hats if they are unsure what to get.\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "4e5be3ec-c26c-42bc-ac16-c39d369883f6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T10:13:26.344815Z",
+     "start_time": "2025-10-26T10:13:26.329694Z"
+    }
+   },
    "source": [
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
     "\n",
-    "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
+    "    stream = gemini.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
     "\n",
     "    response = \"\"\n",
     "    for chunk in stream:\n",
     "        response += chunk.choices[0].delta.content or ''\n",
     "        yield response"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "413e9e4e-7836-43ac-a0c3-e1ab5ed6b136",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T10:13:51.348257Z",
+     "start_time": "2025-10-26T10:13:50.542570Z"
+    }
+   },
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7875\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7875/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "d75f0ffa-55c8-4152-b451-945021676837",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T10:31:45.418530Z",
+     "start_time": "2025-10-26T10:31:45.406934Z"
+    }
+   },
    "source": [
     "system_message += \"\\nIf the customer asks for shoes, you should respond that shoes are not on sale today, \\\n",
     "but remind the customer to look at hats!\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "c602a8dd-2df7-4eb7-b539-4e01865a6351",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-26T10:31:46.925551Z",
+     "start_time": "2025-10-26T10:31:46.060283Z"
+    }
+   },
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7877\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7877/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
   },
   {
    "cell_type": "code",
@@ -238,7 +369,7 @@
     "    \n",
     "    messages = [{\"role\": \"system\", \"content\": relevant_system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
     "\n",
-    "    stream = openai.chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
+    "    stream = gemini .chat.completions.create(model=MODEL, messages=messages, stream=True)\n",
     "\n",
     "    response = \"\"\n",
     "    for chunk in stream:\n",
