--- a/week2/day4.ipynb
+++ b/week2/day4.ipynb
@@ -12,10 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "8b50bbe2-c0b1-49c3-9a5c-1ba7efa2bcb4",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:10:54.875934Z",
+     "start_time": "2025-11-01T08:10:54.867559Z"
+    }
+   },
    "source": [
     "# imports\n",
     "\n",
@@ -24,62 +27,103 @@
     "from dotenv import load_dotenv\n",
     "from openai import OpenAI\n",
     "import gradio as gr"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "747e8786-9da8-4342-b6c9-f5f69c2e22ae",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:11:52.492186Z",
+     "start_time": "2025-11-01T08:11:52.155389Z"
+    }
+   },
    "source": [
     "# Initialization\n",
+    "load_dotenv()\n",
+    "key = os.getenv('GOOGLE_API_KEY')\n",
     "\n",
-    "load_dotenv(override=True)\n",
-    "\n",
-    "openai_api_key = os.getenv('OPENAI_API_KEY')\n",
-    "if openai_api_key:\n",
-    "    print(f\"OpenAI API Key exists and begins {openai_api_key[:8]}\")\n",
-    "else:\n",
-    "    print(\"OpenAI API Key not set\")\n",
-    "    \n",
-    "MODEL = \"gpt-4o-mini\"\n",
-    "openai = OpenAI()\n",
-    "\n",
-    "# As an alternative, if you'd like to use Ollama instead of OpenAI\n",
-    "# Check that Ollama is running for you locally (see week1/day2 exercise) then uncomment these next 2 lines\n",
-    "# MODEL = \"llama3.2\"\n",
-    "# openai = OpenAI(base_url='http://localhost:11434/v1', api_key='ollama')\n"
-   ]
+    "gemini = OpenAI(\n",
+    "    api_key=key,\n",
+    "    base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n",
+    ")\n",
+    "MODEL = 'gemini-2.5-flash'"
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0a521d84-d07c-49ab-a0df-d6451499ed97",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:11:55.497484Z",
+     "start_time": "2025-11-01T08:11:55.485294Z"
+    }
+   },
    "source": [
     "system_message = \"You are a helpful assistant for an Airline called FlightAI. \"\n",
     "system_message += \"Give short, courteous answers, no more than 1 sentence. \"\n",
     "system_message += \"Always be accurate. If you don't know the answer, say so.\""
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "61a2a15d-b559-4844-b377-6bd5cb4949f6",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:12:06.553626Z",
+     "start_time": "2025-11-01T08:12:04.849335Z"
+    }
+   },
    "source": [
     "# This function looks rather simpler than the one from my video, because we're taking advantage of the latest Gradio updates\n",
     "\n",
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
-    "    response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
+    "    response = gemini.chat.completions.create(model=MODEL, messages=messages)\n",
     "    return response.choices[0].message.content\n",
     "\n",
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7860\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7860/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 5
   },
   {
    "cell_type": "markdown",
@@ -99,10 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0696acb1-0b05-4dc2-80d5-771be04f1fb2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:14:14.185106Z",
+     "start_time": "2025-11-01T08:14:14.177301Z"
+    }
+   },
    "source": [
     "# Let's start by making a useful function\n",
     "\n",
@@ -112,24 +159,52 @@
     "    print(f\"Tool get_ticket_price called for {destination_city}\")\n",
     "    city = destination_city.lower()\n",
     "    return ticket_prices.get(city, \"Unknown\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "80ca4e09-6287-4d3f-997d-fa6afbcf6c85",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:14:54.164310Z",
+     "start_time": "2025-11-01T08:14:54.155276Z"
+    }
+   },
    "source": [
     "get_ticket_price(\"Berlin\")"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tool get_ticket_price called for Berlin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'$499'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "4afceded-7178-4c05-8fa6-9f2085e6a344",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:17:45.019579Z",
+     "start_time": "2025-11-01T08:17:45.009140Z"
+    }
+   },
    "source": [
     "# There's a particular dictionary structure that's required to describe our function:\n",
     "\n",
@@ -148,19 +223,26 @@
     "        \"additionalProperties\": False\n",
     "    }\n",
     "}"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "bdca8679-935f-4e7f-97e6-e71a4d4f228c",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:18:16.498783Z",
+     "start_time": "2025-11-01T08:18:16.489300Z"
+    }
+   },
    "source": [
     "# And this is included in a list of tools:\n",
     "\n",
     "tools = [{\"type\": \"function\", \"function\": price_function}]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -178,31 +260,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "ce9b0744-9c78-408d-b9df-9f6fd9ed78cf",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:25:47.862835Z",
+     "start_time": "2025-11-01T08:25:47.819259Z"
+    }
+   },
    "source": [
     "def chat(message, history):\n",
     "    messages = [{\"role\": \"system\", \"content\": system_message}] + history + [{\"role\": \"user\", \"content\": message}]\n",
-    "    response = openai.chat.completions.create(model=MODEL, messages=messages, tools=tools)\n",
+    "    response = gemini.chat.completions.create(model=MODEL, messages=messages, tools=tools)\n",
     "\n",
     "    if response.choices[0].finish_reason==\"tool_calls\":\n",
     "        message = response.choices[0].message\n",
     "        response, city = handle_tool_call(message)\n",
     "        messages.append(message)\n",
     "        messages.append(response)\n",
-    "        response = openai.chat.completions.create(model=MODEL, messages=messages)\n",
+    "        response = gemini.chat.completions.create(model=MODEL, messages=messages)\n",
     "    \n",
     "    return response.choices[0].message.content"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "b0992986-ea09-4912-a076-8e5603ee631f",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:25:48.476546Z",
+     "start_time": "2025-11-01T08:25:48.462052Z"
+    }
+   },
    "source": [
     "# We have to write that function handle_tool_call:\n",
     "\n",
@@ -217,17 +307,64 @@
     "        \"tool_call_id\": tool_call.id\n",
     "    }\n",
     "    return response, city"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f4be8a71-b19e-4c2f-80df-f59ff2661f14",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-01T08:25:52.515783Z",
+     "start_time": "2025-11-01T08:25:50.352045Z"
+    }
+   },
    "source": [
     "gr.ChatInterface(fn=chat, type=\"messages\").launch()"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ],
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 12
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "546b34594318908c"
   }
  ],
  "metadata": {
